[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-mqtt"
version = "0.1.0"
description = "MQTT connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun>=0.4.14",
]

[project.optional-dependencies]
test = ["pytest>=8"]
mqtt = ["paho-mqtt>=1.6"]

[project.scripts]
urirun-mqtt = "urirun_connector_mqtt.core:main"

[project.entry-points."urirun.bindings"]
mqtt = "urirun_connector_mqtt.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_mqtt*"]

[tool.setuptools.package-data]
urirun_connector_mqtt = ["connector.manifest.json"]
